unpackaged/objects/copado__Quality_Gate_Rule__c.object
<CustomObject>
	<fields>
		<fullName>copado__ActionsList__c</fullName>
		<formula>IF(INCLUDES(copado__Actions__c , &quot;Promotion&quot; ), &quot;Promotion; &quot;,null) &amp;
IF(INCLUDES(copado__Actions__c , &quot;PromotionDeployment&quot; ), &quot;Promotion Deployment; &quot;,null) &amp;
IF(INCLUDES(copado__Actions__c , &quot;Commit&quot; ), &quot;Commit; &quot;,null) &amp;
IF(INCLUDES(copado__Actions__c , &quot;PackageCreation&quot; ), &quot;Package Creation; &quot;,null) &amp;
IF(INCLUDES(copado__Actions__c , &quot;PackageDistribution&quot; ), &quot;Package Distribution; &quot;,null)</formula>
		<label>Copado Actions List</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Actions__c</fullName>
		<inlineHelpText>Select the Copado Action to which this Quality Gate Rule will be applied to.</inlineHelpText>
		<label>Copado Actions</label>
		<required>true</required>
		<type>MultiselectPicklist</type>
		<valueSet>
			<controllingField>copado__Execution_sequence__c</controllingField>
			<restricted>true</restricted>
			<valueSetName>copado__Copado_Actions</valueSetName>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Execution_sequence__c</fullName>
		<inlineHelpText>Define when, during runtime, a quality gate rule should be evaluated for the action selected.</inlineHelpText>
		<label>Execution Sequence</label>
		<required>true</required>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Before</fullName>
				</value>
				<value>
					<fullName>After</fullName>
				</value>
				<value>
					<fullName>When branch is ready</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Status__c</fullName>
		<defaultValue>&quot;Inactive&quot;</defaultValue>
		<label>Status</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Active</fullName>
				</value>
				<value>
					<fullName>Inactive</fullName>
					<default>true</default>
					<label>Inactive</label>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Tool__c</fullName>
		<inlineHelpText>Tool used to execute Tests if the related conditions are met. This value will be matched against the Tool of the Test record.</inlineHelpText>
		<label>Tool</label>
		<required>true</required>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetName>copado__Test_Tool</valueSetName>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Type__c</fullName>
		<description>Identifies the type of quality gate related to the selected tool.</description>
		<inlineHelpText>Identifies the type of quality gate related to the selected tool.</inlineHelpText>
		<label>Type</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__dataJson__c</fullName>
		<label>dataJson</label>
		<length>131072</length>
		<type>LongTextArea</type>
	</fields>
	<label>Quality Gate Rule</label>
	<listViews>
		<fullName>copado__All</fullName>
		<columns>NAME</columns>
		<columns>copado__Status__c</columns>
		<columns>copado__Type__c</columns>
		<columns>copado__Tool__c</columns>
		<columns>copado__Execution_sequence__c</columns>
		<columns>copado__Actions__c</columns>
		<columns>OWNER.ALIAS</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<label>Quality Gate Rule Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Quality Gate Rules</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>